Corrigir ordenação nas tabelas da cotação

--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -156,7 +156,7 @@
           <span>Filtrando Produto</span>
 
           <span style="float: right; padding-left: 20px">
-          <a *ngIf="adicionandoProduto()" (click)="cancelarAdicao()">
+          <a (click)="cancelarAdicao()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
         </span>
